--- a/pr1/index.html
+++ b/pr1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Заголовок окна</title>
+        <title>Практическая работа №1</title>
         <meta charset="utf-8" />
     </head>
     <body>
