--- a/pr3/russia.html
+++ b/pr3/russia.html
@@ -13,7 +13,7 @@
             <li>
                 <ol>
                     <li>
-                        Госуда́рственный академи́ческий Большо́й теа́тр Росси́и[1] (ГАБТ),
+                        Госуда́рственный академи́ческий Большо́й теа́тр Росси́и (ГАБТ),
                     </li>
                     <li>
                         или просто Большой театр — один из крупнейших в России и один из самых значительных в мире театров оперы и балета.
@@ -43,23 +43,23 @@
                 <ol>
                     <li>
                         Историю театра принято вести с марта 1776 года, когда губернский прокурор князь Пётр Васильевич Урусов получил высочайшее соизволение императрицы Екатерины II «содержать… театральные всякого рода представления, а также концерты, воксалы и маскарады».
-                        Князь начал строительство театра, который — по месту расположения на улице Петровка (на правом берегу Неглинки) — был назван Петровским[2].
+                        Князь начал строительство театра, который — по месту расположения на улице Петровка (на правом берегу Неглинки) — был назван Петровским.
                     </li>
                     <li>
                         Театр Урусова сгорел ещё до его открытия, и князь передал дела своему компаньону, английскому предпринимателю Майклу (Михаилу) Меддоксу. Именно под руководством Меддокса по проекту архитектора Христиана Розберга в 1776—1789 годах был построен Большой Петровский театр[3]:3.
-                        Театр получил название по улице Петровке, в начале которой он стоял на тесном участке, окружённый хаотичной застройкой[4].
+                        Театр получил название по улице Петровке, в начале которой он стоял на тесном участке, окружённый хаотичной застройкой.
                     </li>
                     <li>
-                        Трёхэтажное кирпичное здание с белокаменными деталями и под тесовой крышей поднялось за пять месяцев и обошлось Медоксу в 130 тысяч рублей серебром, на 50 тысяч больше сметы. Торжественное открытие состоялось 30 декабря 1780 года.[5]
-                        Театр имел партер, три яруса лож и галерею, вмещавшие около 1 тыс. зрителей, «маскерадную залу в два света», «карточную» и другие специальные помещения; в 1788 году к театру пристроили новый круглый маскарадный зал — «Ротунду»[6].
+                        Трёхэтажное кирпичное здание с белокаменными деталями и под тесовой крышей поднялось за пять месяцев и обошлось Медоксу в 130 тысяч рублей серебром, на 50 тысяч больше сметы. Торжественное открытие состоялось 30 декабря 1780 года.
+                        Театр имел партер, три яруса лож и галерею, вмещавшие около 1 тыс. зрителей, «маскерадную залу в два света», «карточную» и другие специальные помещения; в 1788 году к театру пристроили новый круглый маскарадный зал — «Ротунду».
                     </li>
                     <li>
-                        По другим источникам, зал вмещал 800 посетителей[4]: «В театре было четыре яруса с ложами и две просторные галереи. В партере насчитывалось два ряда с закрытыми по бокам сиденьями.
-                        Роскошно украшенные ложи стоили от трёхсот до тысячи рублей и дороже. Билет в партер стоил один рубль. Театральный зал вмещал 800 зрителей и ещё столько же публики вмещалось на галереях».[7]
+                        По другим источникам, зал вмещал 800 посетителей: «В театре было четыре яруса с ложами и две просторные галереи. В партере насчитывалось два ряда с закрытыми по бокам сиденьями.
+                        Роскошно украшенные ложи стоили от трёхсот до тысячи рублей и дороже. Билет в партер стоил один рубль. Театральный зал вмещал 800 зрителей и ещё столько же публики вмещалось на галереях».
                     </li>
                     <li>
                         За первые 14 лет владения театром Медоксом в Петровском театре было поставлено 425 оперных и балетных спектаклей.
-                        В 1794 году Медокс из-за финансовых трудностей вынужден был передать театр в казну; театр стал Императорским[3]:3.
+                        В 1794 году Медокс из-за финансовых трудностей вынужден был передать театр в казну; театр стал Императорским.
                     </li>
                 </ol>
             </li>
@@ -79,7 +79,7 @@
                     <li>
                         На следующий день спектакль был повторен. Об этом открытии сохранились воспоминания С. Аксакова: «Большой Петровский театр, возникший из старых, обгорелых развалин… изумил и восхитил меня…
                         Великолепное громадное здание, исключительно посвященное моему любимому искусству, уже одной своею внешностью привело меня в радостное волнение»; а В. Одоевский,
-                        восхищаясь балетным спектаклем, писал об этом представлении так: «Блеск костюмов, красота декораций, словом, все театральное великолепие здесь соединилось, как равно и в прологе»[18]
+                        восхищаясь балетным спектаклем, писал об этом представлении так: «Блеск костюмов, красота декораций, словом, все театральное великолепие здесь соединилось, как равно и в прологе»
                         В 1842 году театр перешёл под руководство петербургской дирекции императорских театров; из Петербурга в Москву приехала оперная труппа.
                     </li>
                 </ol>
@@ -91,19 +91,19 @@
                     <li>
                         1 июля 2005 года Основная сцена Большого театра закрылась на реконструкцию, которую первоначально предполагали завершить в 2008 году. Последним спектаклем,
                         прошедшим на Основной сцене перед закрытием, стала опера Мусоргского «Борис Годунов» (30 июня 2005 года).
-                        Планируемое время открытия — 28 октября 2011 года[27], спектакль — премьера оперы Глинки «Руслан и Людмила» (режиссёр-постановщик — Дмитрий Черняков).
+                        Планируемое время открытия — 28 октября 2011 года, спектакль — премьера оперы Глинки «Руслан и Людмила» (режиссёр-постановщик — Дмитрий Черняков).
                     </li>
                     <li>
                         Подготовительные работы для предстоящей реконструкции, в ходе которых от исторического здания остались только три несущих стены — главный фасад и боковые,
                         а под фундаментом был вырыт гигантский котлован глубиной более 30 метров, сильно затянулись.
                     </li>
                     <li>
-                        В сентябре 2009 года СКП России возбудил уголовное дело о необоснованном расходовании средств[28]. По данным Счётной палаты, за период реконструкции Большого театра её стоимость выросла в 16 раз,
-                        а по словам министра культуры А. А. Авдеева на март 2011 года превысила 20 млрд рублей (500 млн €), что, якобы, было в первую очередь связано с сильным подорожанием цемента и кирпича[29].
+                        В сентябре 2009 года СКП России возбудил уголовное дело о необоснованном расходовании средств. По данным Счётной палаты, за период реконструкции Большого театра её стоимость выросла в 16 раз,
+                        а по словам министра культуры А. А. Авдеева на март 2011 года превысила 20 млрд рублей (500 млн €), что, якобы, было в первую очередь связано с сильным подорожанием цемента и кирпича.
                     </li>
                     <li>
                         14 февраля 2012 года Счётная палата РФ указала, что «реконструкция Большого театра обошлась в 35,4 млрд рублей, вместо запланированных 37 млрд,
-                        что составляет 95,5 процентов сметной стоимости. К таким выводам пришли аудиторы Счетной палаты /СП/ России по итогам проведенных экспертиз»[30][31].
+                        что составляет 95,5 процентов сметной стоимости. К таким выводам пришли аудиторы Счетной палаты /СП/ России по итогам проведенных экспертиз».
                     </li>
                 </ol>
             </li>
