--- a/HC/pr12/index.html
+++ b/HC/pr12/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <div class="main">
+        <div class="main container">
             <div class="inside-one">
                 <div class="pic"></div>
                 <div class="text">
